--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-share": "^2.0.0",
-    "react-native-swiper": "^1.5.14",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
