--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-share": "^2.0.0",
+    "react-native-sound": "^0.11.0",
     "react-native-swiper": "^1.6.0-rc.3",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.3"
